err/fado.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FAdo'...
Compiling './lib/python3.5/site-packages/FAdo/common.py'...
***   File "./lib/python3.5/site-packages/FAdo/common.py", line 381
    print "%s%s" % ("".join(["\t" for _ in xrange(level)]), string)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FAdo/fa.py'...
***   File "./lib/python3.5/site-packages/FAdo/fa.py", line 4744
    print "_ ",
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/FAdo/fl.py'...
***   File "./lib/python3.5/site-packages/FAdo/fl.py", line 939
    irank = dict((v, [k for (k, xx) in filter(lambda (key, value): value == v, rank.items())])
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FAdo/icdfaboltz.py'...
***   File "./lib/python3.5/site-packages/FAdo/icdfaboltz.py", line 87
    print flags
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/FAdo/reex.py'...
***   File "./lib/python3.5/site-packages/FAdo/reex.py", line 4256
    print lst[0]
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/FAdo/rndadfa.py'...
***   File "./lib/python3.5/site-packages/FAdo/rndadfa.py", line 341
    print "k=%d" % k
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/FAdo/transducers.py'...
***   File "./lib/python3.5/site-packages/FAdo/transducers.py", line 42
    def _concat((a, b)):
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FAdo/unionFind.py'...
***   File "./lib/python3.5/site-packages/FAdo/unionFind.py", line 98
    print "%d \in %d" % (i, s.find(i))
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FAdo/yappy_parser.py'...
***   File "./lib/python3.5/site-packages/FAdo/yappy_parser.py", line 107
    print "operators %s" % self.operators
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/FAdo-1.3.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
